# Codemy

./: .readthedocs.yaml  README.rst  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
codemy/: __init__.py  __main__.py
docs/: api.rst  conf.py  contributing.rst  index.rst  runninglocally.rst
tests/: test_codemy.py
